Set a full collapse to one column when footer width goes below samo's fixed width design

--- a/app/assets/stylesheets/white_theme/footer.scss
+++ b/app/assets/stylesheets/white_theme/footer.scss
@@ -1,3 +1,5 @@
+$footer-collapse: 'only screen and (max-width: 952px)';
+
 footer#site_footer {
   font-size: 13px;
   font-weight: normal;
@@ -19,6 +21,9 @@ footer#site_footer {
     margin-left: auto;
     padding-left: 8px;
     box-sizing: border-box;
+    @media #{$footer-collapse} { 
+      width: 100%;
+    }
     h3 {
       margin-bottom: 0px;
     }
@@ -39,6 +44,9 @@ footer#site_footer {
       width: 952px;
       margin-right: auto;
       margin-left: auto;
+      @media #{$footer-collapse} { 
+        width: 100%;
+      }  
       .forum_view_all {
         margin-top: 6px;
         font-family: $sans-font;
@@ -47,7 +55,6 @@ footer#site_footer {
         display: block;
         float: right;
         font-size: 12px;
-        line-height: 14px;
         i {
           svg {
             height: 16px;
@@ -66,7 +73,7 @@ footer#site_footer {
         margin-left: 8px;
       }
       ul {
-        clear: boStarth;
+        clear: both;
         display: flex;
         justify-content: space-between;
         margin: 0;
@@ -79,6 +86,11 @@ footer#site_footer {
           border-radius: 3px;
           background-color: #ffffff;
           box-shadow: 1px 1px 2px rgba(0, 0, 0, .2);
+          @media #{$footer-collapse} { 
+            width: 100%;
+            margin-bottom: 8px;
+          }
+  
           .forum_topic {
             font-family: $medium-sans-font;
             line-height: 1.2em;
@@ -119,14 +131,11 @@ footer#site_footer {
         line-height: 20px;
         padding: 16px;
         box-shadow: 2px 0px 4px rgba(0, 0, 0, 0.25);
-        @media #{$tablet} {
+        @media #{$footer-collapse} {
           font-size: 17px;
           line-height: 32px;
           width: 100%;
-          h3.footer_column_header {
-            font-size: 18px;
-            margin-bottom: 12px;
-          }
+          margin-bottom: 16px;
         }
         .footer_column_header {
           color: #eb7b0c;
